--- a/arch/arm64/configs/ql1650-perf_defconfig
+++ b/arch/arm64/configs/ql1650-perf_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Aurora"
+CONFIG_LOCALVERSION="-Aquila"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_MACH_X01BD=y
@@ -67,7 +67,7 @@ CONFIG_NR_CPUS=8
 CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=240
 CONFIG_PREEMPT=y
-CONFIG_HZ=80
+CONFIG_HZ=300
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUGFS is not set
@@ -95,7 +95,6 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ALUCARDSCHED=y
 CONFIG_CPU_FREQ_GOV_HELIX=y
@@ -105,13 +104,6 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_DSBOOST=y
 CONFIG_INPUT_BOOST_DURATION=500
 CONFIG_INPUT_STUNE_BOOST=50
-CONFIG_DEVFREQ_BOOST=y
-CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
-CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=1571
-CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
-CONFIG_SIMPLE_GPU_ALGORITHM=y
-CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
-CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_NET=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_DEFAULT=y
@@ -122,7 +114,6 @@ CONFIG_XFRM_USER=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
-CONFIG_WIREGUARD=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
@@ -510,7 +501,6 @@ CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_SOUND=y
-CONFIG_AINUR_DTS_HW=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
@@ -686,12 +676,19 @@ CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 CONFIG_SPDM_SCM=y
 CONFIG_DEVFREQ_SPDM=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=1571
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
+CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 CONFIG_EXTCON=y
 CONFIG_IIO=y
 CONFIG_QCOM_RRADC=y
 CONFIG_QCOM_TADC=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
